# Robot-Simulator

./: .gitignore  CMakeLists.txt  DistanceSensor.cpp  DistanceSensor.h  LICENSE  README.md  RobotOperator.cpp  RobotOperator.h  constants.h  helpers.cpp  helpers.h  main.cpp  robot.cpp  robot.h  sensor.cpp  sensor.h  world.cpp  world.h
Operators/: AStarOperator.cpp  AStarOperator.h  BasicWithNovelty.cpp  BasicWithNovelty.h  ParticleOperator.cpp  ParticleOperator.h  QLearningOperator.cpp  QLearningOperator.h  RobotOperator.cpp  RobotOperator.h  SelfDrivingOperator.cpp  SelfDrivingOperator.h
Scenario/: AStarScenario.cpp  AStarScenario.h  ParticleScenario.cpp  ParticleScenario.h  QLearningScenario.cpp  QLearningScenario.h  RobotArmy.cpp  RobotArmy.h  SelfDrivingScenario.cpp  SelfDrivingScenario.h  SimulationScenario.cpp  SimulationScenario.h  TestRobots.cpp  TestRobots.h
Simulator/: RobotOperator.cpp  RobotOperator.h  constants.h  helpers.cpp  helpers.h  world.cpp  world.h
Simulator/interactive_objects/: CollisionData.h  DistanceSensor.cpp  DistanceSensor.h  WallPoint.cpp  WallPoint.h  robot.cpp  robot.h
Simulator/interfaces/: SensorInterface.h
Simulator/world/: FastMap.h  MapLine.cpp  MapLine.h  MapObject.h  MapRobot.cpp  MapRobot.h  world.cpp  world.h
interactive_objects/: CollisionData.h  DistanceSensor.cpp  DistanceSensor.h  WallPoint.cpp  WallPoint.h  robot.cpp  robot.h
interactive_objects/interfaces/: CollidableCircle.cpp  CollidableCircle.h  CollidableObject.h  CollidablePoint.h  CollidableRay.cpp  CollidableRay.h  RobotControlInterface.h
interfaces/: RobotControlInterface.h  SensorInterface.h
lib/: AStar.cpp  AStar.h  DummyRobot.cpp  DummyRobot.h  FastAStar.cpp  FastAStar.h  FastMap.h  ParticleFilter.cpp  ParticleFilter.h  helpers.cpp  helpers.h
lib/AStar/: AStarDataMap.h  AStarDataStructures.h  FastAStar.cpp  FastAStar.h
lib/PathFindingAlgorithm/: PathFindingAlgorithm.cpp  (+3 more)
logs/: example.gnuplot
(+20 files in other folders)
